# CS107_class

./: README.md
docker/: Dockerfile
homework/hw1/: README.md
homework/hw2/: README.md
homework/hw3/: README.md
homework/hw4/: README.md
homework/hw5/: README.md
homework/hw6/: README.md
lab/pp1/: README.md
lab/pp10/: README.md
lab/pp10/data/: exercise_1.py
lab/pp10/solution/: exercise_1.py
lab/pp11/: README.md
lab/pp11/solution/: exercise_1.py  make_sql.sh
lab/pp12/: README.md
lab/pp12/solution/: lecture22.ipynb  lecture23.ipynb
lab/pp2/: README.md
lab/pp2/solution/: exercise_1.sh  exercise_2.sh
lab/pp3/solution/: exercise_1.sh
lab/pp4/: README.md
lab/pp4/solution/: exercise_1.py
lab/pp5/: README.md
lab/pp5/solution/: exercise_1.py  exercise_2.py
lab/pp6/: README.md
lab/pp7/: README.md
lab/pp7/solution/: exercise_2.py
lab/pp8/: README.md
lab/pp8/solution/: install.sh
lab/pp9/: README.md
lab/pp9/data/: exercise_1.py
lab/pp9/solution/: exercise_1.py
lecture/code/lecture03/: redirections.sh  this_command_exists_locally
lecture/code/lecture08/: FrenchDeck.py  Thing.py
lecture/code/lecture09/python_project/: .gitignore  README.md  pyproject.toml  setup.cfg
lecture/code/lecture09/python_project/src/cs107_package/: __init__.py  __main__.py
lecture/code/lecture09/python_project/src/cs107_package/subpkg_1/: module_1.py  module_2.py
lecture/code/lecture09/python_project/src/cs107_package/subpkg_2/: module_3.py
lecture/code/lecture14/CI_tests/: README.rst  pyproject.toml
lecture/code/lecture14/CI_tests/src/cs107_package/: __init__.py
lecture/code/lecture17/: linked_list.py
lecture/code/lecture19/: coroutine.py  large_data.py  linked_list.py
lecture/code/lecture20/: global_local.py  nonlocal.py
lecture/code/lecture22/: lecture22.ipynb
lecture/code/lecture23/: candidates.txt  (+3 more)
reading/pp2/: a.sh  egrep_example.sh  example.sh  file.sh  for_sum.sh  grep_sample.txt  loop2.sh  loop_count.sh  read.sh  sample.txt  sleep.sh  star_vs_at.sh  star_vs_at2.sh  while.sh
reading/review/: Bash.md  Closure.md  Git.md  Iterator.ipynb  Super.md  class vs static.py
(+123 files in other folders)
