[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cs107_package"
version = "0.0.1"
authors = [
  { name="Fabian Wermelinger", email="fabianw@seas.harvard.edu" },
]
description = "Test project for continuous integration and testing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing"
]

[project.urls]
"Homepage" = "https://harvard-iacs.github.io/2022-CS107/"
